<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ScheduleActivity">

  <Button
      android:id="@+id/btn1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:background="@color/red"
      android:text="@string/day1"
      app:layout_constraintBottom_toBottomOf="@+id/btn3"
      app:layout_constraintEnd_toStartOf="@+id/btn2"
      app:layout_constraintHorizontal_chainStyle="spread_inside"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/btn3" />

  <Button
      android:id="@+id/btn4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:background="@color/red"
      android:text="@string/day4"
      app:layout_constraintBaseline_toBaselineOf="@+id/btn5"
      app:layout_constraintEnd_toStartOf="@+id/btn5"
      app:layout_constraintHorizontal_chainStyle="spread_inside"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/btn10"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:background="@color/red"
      android:text="@string/day10"
      app:layout_constraintBaseline_toBaselineOf="@+id/btn11"
      app:layout_constraintEnd_toStartOf="@+id/btn11"
      app:layout_constraintHorizontal_chainStyle="spread_inside"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/btn7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:background="@color/red"
      android:text="@string/day7"
      app:layout_constraintBaseline_toBaselineOf="@+id/btn8"
      app:layout_constraintEnd_toStartOf="@+id/btn8"
      app:layout_constraintHorizontal_chainStyle="spread_inside"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/btn2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="1dp"
      android:background="@color/red"
      android:text="@string/day2"
      app:layout_constraintBaseline_toBaselineOf="@+id/btn1"
      app:layout_constraintEnd_toStartOf="@+id/btn3"
      app:layout_constraintStart_toEndOf="@+id/btn1" />

  <Button
      android:id="@+id/btn11"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:layout_marginEnd="1dp"
      android:background="@color/red"
      android:text="@string/day11"
      app:layout_constraintEnd_toStartOf="@+id/btn12"
      app:layout_constraintStart_toEndOf="@+id/btn10"
      app:layout_constraintTop_toBottomOf="@+id/btn8" />

  <Button
      android:id="@+id/btn8"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="45dp"
      android:layout_marginEnd="1dp"
      android:background="@color/red"
      android:text="@string/day8"
      app:layout_constraintEnd_toStartOf="@+id/btn9"
      app:layout_constraintStart_toEndOf="@+id/btn7"
      app:layout_constraintTop_toBottomOf="@+id/btn5" />

  <Button
      android:id="@+id/btn5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="43dp"
      android:layout_marginEnd="1dp"
      android:background="@color/red"
      android:text="@string/day5"
      app:layout_constraintEnd_toStartOf="@+id/btn6"
      app:layout_constraintStart_toEndOf="@+id/btn4"
      app:layout_constraintTop_toBottomOf="@+id/btn2" />

  <Button
      android:id="@+id/btn9"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:background="@color/red"
      android:text="@string/day9"
      app:layout_constraintBaseline_toBaselineOf="@+id/btn8"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/btn8" />

  <Button
      android:id="@+id/btn12"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:background="@color/red"
      android:text="@string/day12"
      app:layout_constraintBaseline_toBaselineOf="@+id/btn11"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/btn11" />

  <Button
      android:id="@+id/btn6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:background="@color/red"
      android:text="@string/day6"
      app:layout_constraintBaseline_toBaselineOf="@+id/btn5"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/btn5" />

  <Button
      android:id="@+id/btn3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="105dp"
      android:layout_marginEnd="16dp"
      android:background="@color/red"
      android:text="@string/day3"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/btn2"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/btn_recommendation"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="36dp"
      android:layout_marginTop="58dp"
      android:background="@color/red"
      android:padding="12dp"
      android:text="@string/how"
      app:layout_constraintStart_toEndOf="@+id/btn10"
      app:layout_constraintTop_toBottomOf="@+id/btn11" />

</androidx.constraintlayout.widget.ConstraintLayout>