<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FinalActivity">

  <TextView
      android:id="@+id/congratulation_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="39dp"
      android:text="@string/congratulations"
      android:textColor="@color/white"
      android:textSize="17sp"
      app:layout_constraintBottom_toTopOf="@+id/text_tv"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/text_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="160dp"
      android:gravity="center"
      android:text="@string/final_text"
      android:textColor="@color/white"
      android:textSize="15sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="36dp"
      android:background="@color/red"
      android:padding="5dp"
      android:text="@string/change_rm"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/text_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>